--- a/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
@@ -30,7 +30,7 @@
     <ui:define name="contenido">
         <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/profesor/grafica.css"/>
         <h:outputStylesheet library="css" name="modal.css"/>
-        <div class="uk-margin-large-top"><h1 class="uk-margin-top uk-text-uppercase lescuadron ">#{profesor['dashboard.title']}!</h1></div>
+        <div class="uk-margin-large-top"><h1 class="uk-margin-top uk-text-capitalize lescuadron ">#{profesor['dashboard.title']}!</h1></div>
         <div class="uk-grid" uk-grid="">
             <div class="uk-width-1-3@m">
                 <div class="uk-card uk-card-default uk-card-small color-card-six margen-one">
@@ -180,7 +180,7 @@
                                         <ui:fragment rendered="${grupo.totalAlumno > 0}">
                                             <li style="padding-left: 10px">
                                                 <h:link outcome="asignar-tarea" styleClass="uk-text-primary uk-text-capitalize">
-                                                    <img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/icono/gramatica.svg" alt="gramatica" width="20"/>
+                                                    <img class="uk-margin-small-right" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/icono/gramatica.svg" alt="gramatica" width="20"/>
                                                     <span class="uk-text-middle"><h:outputText value="#{profesor['assign.activity.title']}"/></span>
                                                     <f:param name="grupo" value="#{grupo.id}"/>
                                                 </h:link>
@@ -236,17 +236,12 @@
                             </h:column>
                             <h:column>
                                 <f:facet name="header"><span class="letra-tabla uk-text-bold">opcion</span></f:facet>
-                               <ui:remove>
-                                    <h:commandLink pt:uk-icon="icon: trash">
-                                        <f:ajax listener="#{eliminarTareaControlador.elimina(tareaGrupoVistaModelo.idVideo)}" render="@form"/>
-                                    </h:commandLink>
-                               </ui:remove>
                                 <button type="button" onclick="mensajeConfirmacion(this)"  uk-icon="icon: trash" />
                                 <div class="mensaje-confirmacion visibilidad">
-                                    <span>está seguro que desea eliminar esta actividad?</span>
+                                    <span>#{profesor['dashboard.delete.activity']}</span>
                                     <div>
-                                        <button type="button" class="boton-escuadron-base">cerrar</button>
-                                        <h:commandLink styleClass="boton-escuadron-base" style="background-color: var(--color-peligro)" value="aceptar">
+                                        <button type="button" class="boton-escuadron-base">#{boton['cancel']}</button>
+                                        <h:commandLink styleClass="boton-escuadron-base" style="background-color: var(--color-peligro)" value="#{boton['remove']}">
                                             <f:ajax listener="#{eliminarTareaControlador.elimina(tareaGrupoVistaModelo.idVideo)}" render="@form"/>
                                         </h:commandLink>
                                     </div>
@@ -256,7 +251,7 @@
                     </h:form>
                 </div>
                 <div class="modal-pie">
-                    <button class="cerrar-modal boton-escuadron-base uk-margin-medium-right">Cerrar</button>
+                    <button class="cerrar-modal boton-escuadron-base uk-margin-medium-right">#{boton['close']}</button>
                 </div>
             </div>
         </div>
