Muestra en la vista principal del profesor el promedio de las tareas

--- a/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
@@ -126,6 +126,7 @@
                     <span>#{alumnoTareasNivelModelo.idGrupo}</span><span>#{alumnoTareasNivelModelo.idAlumno}</span>
                     <span>#{alumnoTareasNivelModelo.nombre} #{alumnoTareasNivelModelo.apellidoPaterno} #{alumnoTareasNivelModelo.apellidoMaterno}</span>
                     <span>#{alumnoTareasNivelModelo.totalTareas}</span><span>#{alumnoTareasNivelModelo.nivelLenguaje}</span><span>#{alumnoTareasNivelModelo.nivelLenguajeAlumno}</span>
+                    <span>#{alumnoTareasNivelModelo.promedio}</span>
                 </div>
             </ui:repeat>
         </h:panelGroup>
