--- a/tecolotl-web/src/main/webapp/administracion/coordinador.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/coordinador.xhtml
@@ -179,6 +179,8 @@
                                             id="modal-nick"
                                             pt:placeholder="#{administracion['catalogocoordinador.coordinator.detail.table.header.nick']}"
                                             value="#{coordinadorControlador.coordinadorModelo.apodo}"
+                                            binding="#{coordinadorControlador.uiInput}"
+                                            disabled="#{not empty coordinadorControlador.coordinadorModelo.apodo}"
                                             styleClass="uk-input" >
                                         <f:validateRequired/>
                                         <f:validateLength minimum="3" maximum="30"/>
@@ -238,10 +240,19 @@
                                             styleClass="uk-input"
                                             pt:type="email">
                                         <f:validateRequired/>
-                                        <f:validateLength minimum="3" maximum="30"/>
+                                        <f:validateLength minimum="3" maximum="100"/>
                                     </h:inputText>
                                 </div>
                                 <h:message for="modal-email" errorClass="uk-text-danger uk-display-inline-block primera-mayuscula"/>
+                            </div>
+                            <div class="uk-width-1-1@s uk-width-1-3@m">
+                                <h:outputLabel for="select-sexo" value="sexo"/>
+                                <div class="uk-form-controls">
+                                    <h:selectOneMenu id="select-sexo" styleClass="uk-select" value="#{coordinadorControlador.coordinadorModelo.sexo}">
+                                        <f:selectItem itemValue="m" itemLabel="masculino"/>
+                                        <f:selectItem itemValue="f" itemLabel="femenino"/>
+                                    </h:selectOneMenu>
+                                </div>
                             </div>
                             <div class="uk-width-1-1@s uk-width-1-3@m ">
                                 <h:outputLabel for="input-secret-editar-password" styleClass=" uk-text-capitalize uk-form-label" value="#{administracion['detalleprofesor.active.modal.header.password']}"/>
@@ -268,7 +279,7 @@
                             <f:ajax onevent="function cerrar(data) { cierraModal(data,'modalCoordinador') }"
                                     render="@form formulario-coordinador"
                                     execute="@form"
-                                    listener="#{coordinadorControlador.agrega}"/>
+                                    listener="#{coordinadorControlador.agregar}"/>
                         </h:commandButton>
                         <h:commandButton styleClass="uk-button uk-button-secondary  uk-margin-small-left" value="#{boton['update']}" rendered="#{not empty coordinadorControlador.coordinadorModelo.contador}">
                             <f:ajax onevent="function cerrar(data) { cierraModal(data,'modalCoordinador') }"
