--- a/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
@@ -28,7 +28,8 @@
         </div>
     </ui:define>
     <ui:define name="contenido">
-        <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/profesor/grafica.css"/>
+<!--        <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/profesor/grafica.css"/>-->
+        <h:outputStylesheet library="css" name="/profesor/grafica.css"/>
         <h:outputStylesheet library="css" name="modal.css"/>
         <div class="uk-margin-large-top"><h1 class="uk-margin-top uk-text-capitalize lescuadron ">#{profesor['dashboard.title']}!</h1></div>
         <div class="uk-grid" uk-grid="">
