se agrega boton bajar nivel y se cambian estilos en los letretos informactivos de la vista de profesor

--- a/tecolotl-web/src/main/webapp/profesor/tarea-alumno.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/tarea-alumno.xhtml
@@ -63,7 +63,7 @@
                                         <img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/avatar/astronauta-nino.svg" class="uk-visible@s nino" alt=""/>
                                     </div>
                                     <div class="uk-width-expand">
-                                        <h3 class="uk-card-title uk-margin-remove-bottom uk-text-small uk-text-uppercase uk-text-bold">
+                                        <h3 class="uk-card-title uk-margin-remove-bottom uk-text-small uk-text-bold">
                                             ${profesorGrupoControlador.alumnoModelo.nombre.concat(' ').concat(profesorGrupoControlador.alumnoModelo.apellidoPaterno).concat(' ').concat(profesorGrupoControlador.alumnoModelo.apellidoMaterno)}
                                         </h3>
                                     </div>
