--- a/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
@@ -111,6 +111,7 @@
                                     <div class="uk-card-body tecolotl-card">
                                         <h6 class="uk-margin-small-bottom uk-margin-remove-adjacent uk-text-bold uk-text-small">#{actividadModelo.preguntaDetonadora}</h6>
                                     </div>
+                                    #{actividadModelo.totalTareas}
                                     <div class="uk-card-footer" data-actividad="#{actividadModelo.idActividad}" data-mapas="#{actividadModelo.mapamental}">
                                         <h:panelGroup layout="block" styleClass=" uk-flex uk-flex-center">
                                             <div class="uk-inline uk-text-center">
@@ -142,37 +143,6 @@
                                                     </ul>
                                                 </div>
                                             </div>
-                                            <ui:remove>
-                                                <div class="uk-width-expand ">
-                                                    <h:panelGroup layout="block" styleClass="uk-grid uk-grid-small uk-child-width-1-5" pt:uk-grid="">
-                                                        <div>
-<!--                                                            <h:graphicImage pt:data-uk-tooltip="title: Listening" styleClass="uk-icon-image " library="img" name="icono/listen.svg" />-->
-                                                            <img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/icono/listen.svg" alt="" class="uk-icon-image" uk-tooltip="title: Listening"/>
-                                                        </div>
-                                                        <div>
-                                                            <h:form>
-                                                                <h:commandLink pt:uk-toggle="#modal-transcript" >
-<!--                                                                    <h:graphicImage pt:data-uk-tooltip="title: Trasncript" styleClass="uk-icon-image " library="img" name="icono/transcript1.svg" />-->
-                                                                    <img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/icono/transcript1.svg" alt="" class="uk-icon-image" uk-tooltip="title: Trasncript"/>
-                                                                    <f:ajax listener="#{actividadControlador.buscaTranscripcion(actividadModelo)}" render="transcripcion" />
-                                                                </h:commandLink>
-                                                            </h:form>
-                                                        </div>
-                                                        <div>
-<!--                                                            <h:graphicImage pt:data-uk-tooltip="title: Reading" styleClass="uk-icon-image " library="img" name="icono/reading.svg" />-->
-                                                            <img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/icono/reading.svg" alt="" class="uk-icon-image" uk-tooltip="title: Reading"/>
-                                                        </div>
-                                                        <div>
-<!--                                                            <h:graphicImage pt:data-uk-tooltip="title: Grammar" styleClass="uk-icon-image  " library="img" name="icono/gramatica.svg" />-->
-                                                            <img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/icono/gramatica.svg" alt="" class="uk-icon-image" uk-tooltip="title: Grammar"/>
-                                                        </div>
-                                                        <div>
-                                                            <h:graphicImage pt:data-uk-tooltip="title: Quiz" styleClass="uk-icon-image" library="img" name="icono/quizcalifica.svg" />
-                                                            <img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/icono/quizcalifica.svg" class="uk-icon-image" alt="" uk-tooltip="title: Quiz"/>
-                                                        </div>
-                                                    </h:panelGroup>
-                                                </div>
-                                            </ui:remove>
                                         </h:panelGroup>
                                     </div>
                                 </div>
