cambios de textos en el parte de profesor

--- a/tecolotl-web/src/main/webapp/profesor/lista-mapa-mental.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/lista-mapa-mental.xhtml
@@ -43,7 +43,7 @@
         <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/profesor/calificacion.css"/>
         <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/profesor/mapa-mental.css"/>
 
-        <div class="uk-margin-large-top"><h1 class="uk-margin-top lescuadron">#{profesor['think-develop.and.share']}</h1></div>
+        <div class="uk-margin-large-top"><h1 class="uk-margin-top lescuadron uk-text-capitalize">#{profesor['think-develop.and.share']}</h1></div>
 
         <div class="uk-grid" uk-grid="">
             <div class="uk-width-1-3@m">
