--- a/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
@@ -244,7 +244,7 @@
                                 rowClasses="tdPrimario"
                                 footerClass="thPrimario uk-text-left">
                             <h:column>
-                                <f:facet name="header"><span class="letra-tabla uk-text-bold">#{profesro['dashboard.modal.delete.activity.task']}</span></f:facet>
+                                <f:facet name="header"><span class="letra-tabla uk-text-bold">#{profesor['dashboard.modal.delete.activity.task']}</span></f:facet>
                                 <h:graphicImage url="https://i.ytimg.com/vi/${tareaGrupoVistaModelo.idVideo}/mqdefault.jpg" style="width: 100px"/>
                             </h:column>
                             <h:column>
