--- a/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
@@ -159,7 +159,7 @@
                                     <h:panelGroup layout="block" styleClass="uk-transition-fade uk-overlay-default  califica" rendered="#{tareasProgresoControlador.tareaResuetasModeloLista[0].total ne 0}">
                                         <p class="uk-text-capitalize">#{alumno['more.activity.title.matching.words']}</p>
                                         <ui:repeat value="#{tareasProgresoControlador.tareaAlumnoModeloLista}" var="calificacion">
-                                            <h:outputText rendered="#{(calificacion.id eq tareasProgresoControlador.idTarea) }" value="#{alumno['dashboard.score']}: #{calificacion.calificacionRelacionarImagen eq -1 ? 'sin responder' : calificacion.calificacionRelacionarImagen }"/>
+                                            <h:outputText rendered="#{(calificacion.id eq tareasProgresoControlador.idTarea) }" value="#{alumno['dashboard.score']}: #{calificacion.calificacionRelacionarImagen eq -1 ? alumno['dashboard.no.answer'] : calificacion.calificacionRelacionarImagen }"/>
                                         </ui:repeat>
                                         <ui:remove> <h:outputText  value="#{alumno['dashboard.score']}: #{tareasProgresoControlador.idTarea}"/> </ui:remove>
                                     </h:panelGroup>
@@ -181,7 +181,7 @@
                                     <h:panelGroup layout="block" styleClass="uk-transition-fade uuk-overlay-default  califica" rendered="#{tareasProgresoControlador.tareaResuetasModeloLista[1].total ne 0}">
                                         <p class="uk-text-capitalize">#{alumno['activities.title.comple.all.sentences']}</p>
                                         <ui:repeat value="#{tareasProgresoControlador.tareaAlumnoModeloLista}" var="calificacion">
-                                            <h:outputText rendered="#{(calificacion.id eq tareasProgresoControlador.idTarea) }" value="#{alumno['dashboard.score']}: #{ calificacion.calificacionCompletar eq -1 ? 'sin responder' : calificacion.calificacionCompletar }"/>
+                                            <h:outputText rendered="#{(calificacion.id eq tareasProgresoControlador.idTarea) }" value="#{alumno['dashboard.score']}: #{ calificacion.calificacionCompletar eq -1 ? alumno['dashboard.no.answer'] : calificacion.calificacionCompletar }"/>
                                         </ui:repeat>
                                     </h:panelGroup>
                                     <h:panelGroup styleClass="contenedor-barra" rendered="#{tareasProgresoControlador.tareaResuetasModeloLista[1].total ne 0}">
@@ -202,7 +202,7 @@
                                     <h:panelGroup layout="block" styleClass="uk-transition-fade  uk-overlay-default  califica" rendered="#{tareasProgresoControlador.tareaResuetasModeloLista[2].total ne 0}">
                                         <p class="uk-text-capitalize">#{alumno['activities.title.order.words']}</p>
                                         <ui:repeat value="#{tareasProgresoControlador.tareaAlumnoModeloLista}" var="calificacion">
-                                            <h:outputText rendered="#{(calificacion.id eq tareasProgresoControlador.idTarea)   }" value="#{alumno['dashboard.score']}: #{ calificacion.calificacionGramatica eq -1 ? 'sin responder' : calificacion.calificacionGramatica}"/>
+                                            <h:outputText rendered="#{(calificacion.id eq tareasProgresoControlador.idTarea)   }" value="#{alumno['dashboard.score']}: #{ calificacion.calificacionGramatica eq -1 ? alumno['dashboard.no.answer'] : calificacion.calificacionGramatica}"/>
                                         </ui:repeat>
                                     </h:panelGroup>
                                     <h:panelGroup styleClass="contenedor-barra" rendered="#{tareasProgresoControlador.tareaResuetasModeloLista[2].total ne 0}">
@@ -223,7 +223,7 @@
                                             <h:panelGroup layout="block" styleClass="uk-transition-fade  uk-overlay-default  califica" rendered="#{tareasProgresoControlador.tareaResuetasModeloLista[3].total ne 0}">
                                                 <p class="uk-text-capitalize">#{alumno['for.all.views.mind.map']}</p>
                                                 <ui:repeat value="#{tareasProgresoControlador.tareaAlumnoModeloLista}" var="calificacion">
-                                                    <h:outputText rendered="#{(calificacion.id eq tareasProgresoControlador.idTarea)   }" value="#{alumno['dashboard.score']}: #{ calificacion.calificacionMapamental eq -1 ? 'sin responder' : calificacion.calificacionMapamental}"/>
+                                                    <h:outputText rendered="#{(calificacion.id eq tareasProgresoControlador.idTarea)   }" value="#{alumno['dashboard.score']}: #{ calificacion.calificacionMapamental eq -1 ? alumno['dashboard.no.answer'] : calificacion.calificacionMapamental}"/>
                                                 </ui:repeat>
                                             </h:panelGroup>
                                         <h:panelGroup styleClass="contenedor-barra" rendered="#{tareasProgresoControlador.tareaResuetasModeloLista[3].total ne 0}">
@@ -243,7 +243,7 @@
                                             <h:panelGroup layout="block" styleClass="uk-transition-fade uk-overlay-default califica" rendered="#{tareasProgresoControlador.tareaResuetasModeloLista[4].total ne 0}">
                                                 <p class="uk-text-capitalize">#{alumno['activities.title.order.sentences']}</p>
                                                 <ui:repeat value="#{tareasProgresoControlador.tareaAlumnoModeloLista}" var="calificacion">
-                                                    <h:outputText rendered="#{(calificacion.id eq tareasProgresoControlador.idTarea)   }" value="#{alumno['dashboard.score']}: #{ calificacion.calificacionOraciones eq -1 ? 'sin responder' : calificacion.calificacionOraciones}"/>
+                                                    <h:outputText rendered="#{(calificacion.id eq tareasProgresoControlador.idTarea)   }" value="#{alumno['dashboard.score']}: #{ calificacion.calificacionOraciones eq -1 ? alumno['dashboard.no.answer'] : calificacion.calificacionOraciones}"/>
                                                 </ui:repeat>
                                             </h:panelGroup>
                                         <h:panelGroup styleClass="contenedor-barra" rendered="#{tareasProgresoControlador.tareaResuetasModeloLista[4].total ne 0}">
@@ -263,7 +263,7 @@
                                             <h:panelGroup layout="block" styleClass="uk-transition-fade uk-overlay-default califica" rendered="#{tareasProgresoControlador.tareaResuetasModeloLista[5].total ne 0}">
                                                 <p class="uk-text-capitalize">#{alumno['activities.bar.icon.match']}</p>
                                                 <ui:repeat value="#{tareasProgresoControlador.tareaAlumnoModeloLista}" var="calificacion">
-                                                    <h:outputText rendered="#{(calificacion.id eq tareasProgresoControlador.idTarea)   }" value="#{alumno['dashboard.score']}: #{ calificacion.calificacionRelacionarOraciones eq -1 ? 'sin responder' : calificacion.calificacionRelacionarOraciones}"/>
+                                                    <h:outputText rendered="#{(calificacion.id eq tareasProgresoControlador.idTarea)   }" value="#{alumno['dashboard.score']}: #{ calificacion.calificacionRelacionarOraciones eq -1 ? alumno['dashboard.no.answer'] : calificacion.calificacionRelacionarOraciones}"/>
                                                 </ui:repeat>
                                             </h:panelGroup>
                                         <h:panelGroup styleClass="contenedor-barra" rendered="#{tareasProgresoControlador.tareaResuetasModeloLista[5].total ne 0}">
