se corrigio error de datos por tema de activiadad en filtro de actividad

--- a/tecolotl-web/src/main/webapp/profesor/agregar-csv.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/agregar-csv.xhtml
@@ -33,7 +33,7 @@
     </ui:define>
     <ui:define name="contenido">
         <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/profesor/csv-alumnos.css"/>
-        <div class="uk-margin-large-top"><h1 class="uk-margin-top lescuadron">#{profesor['agregarcsv.title']}</h1></div>
+        <div class="uk-margin-large-top"><h1 class="uk-margin-top lescuadron primera-mayuscula">#{profesor['agregarcsv.title']}</h1></div>
         <div class="uk-grid" uk-grid="">
             <div class="uk-width-1-3@m">
                 <div class="uk-card uk-card-default uk-card-small color-card-six margen-one">
