--- a/tecolotl-web/src/main/webapp/alumno/activity.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/activity.xhtml
@@ -489,7 +489,8 @@
         </script>
 
 
-        <script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/alumno/transcripcion.js"></script>
+<!--        <script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/alumno/transcripcion.js"></script>-->
+        <h:outputScript library="js" name="/alumno/transcripcion.js"/>
 <!--        <h:outputScript library="js" name="alumno/activity.js"/>-->
     </ui:define>
     <ui:define name="enlaces-js">
